fix: attachment template and flow module on mobile

--- a/media/com_emundus/css/emundus.css
+++ b/media/com_emundus/css/emundus.css
@@ -1203,8 +1203,5 @@ footer#g-footer {
 	#attachment_list .attachment_model.em-flex-row {
 		flex-direction: column;
 		align-items: flex-start;
-		.em-ml-4 {
-			margin-left: 0;
-		}
 	}
 }
